--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=http://15.207.252.191:5000/api
 
 # Feature Flags
 REACT_APP_ENABLE_ANALYTICS=false
