--- a/compose.yml
+++ b/compose.yml
@@ -22,6 +22,8 @@ services:
       - database
   frontend:
     build: ./client
+    environment:
+      - REACT_APP_API_URL=http://15.207.252.191:5000/api
     ports:
       - "3000:80"
     depends_on:
